--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "better-auth": "^1.2.12",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
+    "next-intl": "^4.3.4",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
