feat(docs): add multilingual documentation system with fumadocs
- Implement documentation system with English and Chinese support
- Add fumadocs integration for MDX-based documentation
- Set up documentation routes and components
- Move i18n messages to src/i18n/messages
- Update gitignore and tsconfig for new setup

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "check": "biome check .",
     "check:unsafe": "biome check --write --unsafe .",
     "check:write": "biome check --write .",
+    "postinstall": "fumadocs-mdx",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -20,8 +21,12 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@types/mdx": "^2.0.13",
     "better-auth": "^1.2.12",
     "drizzle-orm": "^0.41.0",
+    "fumadocs-core": "^15.6.0",
+    "fumadocs-mdx": "^11.6.10",
+    "fumadocs-ui": "^15.6.0",
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
     "postgres": "^3.4.4",
