--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
+      "@/.source": ["./.source/index.ts"],
       "@/*": ["./src/*"]
     }
   },
