--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@types/mdx": "^2.0.13",
     "better-auth": "^1.2.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "fumadocs-core": "^15.6.0",
     "fumadocs-mdx": "^11.6.10",
     "fumadocs-ui": "^15.6.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -43,6 +47,7 @@
     "drizzle-kit": "^0.30.5",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2"
   },
   "ct3aMetadata": {
