--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -36,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@types/mdx": "^2.0.13",
+    "@types/mime-types": "^3.0.1",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,13 +47,17 @@
     "fumadocs-mdx": "^11.6.10",
     "fumadocs-ui": "^15.6.0",
     "lucide-react": "^0.525.0",
+    "mime-types": "^3.0.1",
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "sharp": "^0.34.2",
     "sonner": "^2.0.5",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.6"
