--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@types/mdx": "^2.0.13",
     "@types/mime-types": "^3.0.1",
+    "@types/uuid": "^10.0.0",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,8 +61,10 @@
     "react-dropzone": "^14.3.8",
     "sharp": "^0.34.2",
     "sonner": "^2.0.5",
+    "stripe": "^18.3.0",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.6"
   },
