--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tabler/icons-react": "^3.34.0",
     "@types/mdx": "^2.0.13",
     "@types/mime-types": "^3.0.1",
     "@types/uuid": "^10.0.0",
