--- a/env.example
+++ b/env.example
@@ -25,5 +25,9 @@ STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
 STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
 
+# Admin Configuration
+# Comma-separated list of admin emails
+ADMIN_EMAILS="admin@example.com,admin2@example.com"
+
 # App URL
 NEXT_PUBLIC_APP_URL="http://localhost:3000" 
