--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev": "next dev --turbo",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "admin:setup": "tsx scripts/setup-admin.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
@@ -56,6 +57,7 @@
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
+    "pino": "^9.7.0",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -76,8 +78,10 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "drizzle-kit": "^0.30.5",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2"
   },
