--- a/package.json
+++ b/package.json
@@ -17,7 +17,20 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "admin:setup": "tsx scripts/setup-admin.ts"
+    "admin:setup": "tsx scripts/setup-admin.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:security": "playwright test tests/security",
+    "test:performance": "playwright test tests/performance",
+    "test:lighthouse": "lhci autorun --config=tests/performance/lighthouse.config.js",
+    "test:load": "artillery run tests/performance/load-test.yml",
+    "test:all": "pnpm test && pnpm test:e2e && pnpm test:security"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
@@ -73,17 +86,34 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@jest/globals": "^30.0.4",
+    "@lhci/cli": "^0.15.1",
+    "@mswjs/data": "^0.16.2",
+    "@playwright/test": "^1.53.2",
     "@tailwindcss/postcss": "^4.0.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/supertest": "^6.0.3",
+    "artillery": "^2.0.23",
     "drizzle-kit": "^0.30.5",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "msw": "^2.10.3",
     "pino-pretty": "^13.0.0",
+    "playwright": "^1.53.2",
     "postcss": "^8.5.3",
+    "supertest": "^7.1.1",
     "tailwindcss": "^4.0.15",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "undici": "^7.11.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
