--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.1.0",
     "drizzle-orm": "^0.41.0",
     "fumadocs-core": "^15.6.0",
     "fumadocs-mdx": "^11.6.10",
