--- a/env.example
+++ b/env.example
@@ -24,6 +24,11 @@ R2_PUBLIC_URL="https://your-domain.com"
 STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
 STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
+NEXT_PUBLIC_STRIPE_PRICE_PRO_MONTHLY="price_xxx"
+NEXT_PUBLIC_STRIPE_PRICE_PRO_YEARLY="price_xxx"
+NEXT_PUBLIC_STRIPE_PRICE_ENTERPRISE_MONTHLY="price_xxx"
+NEXT_PUBLIC_STRIPE_PRICE_ENTERPRISE_YEARLY="price_xxx"
+
 
 # Admin Configuration
 # Comma-separated list of admin emails
