test: refactor test files and add new test cases
- Refactor existing test files to use simpler implementations
- Add new test cases for admin guard and auth actions
- Update test configurations and dependencies
- Remove unused test files

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -5,7 +5,16 @@
     "clientKind": "git",
     "useIgnoreFile": true
   },
-  "files": { "ignoreUnknown": false, "ignore": [] },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": [
+      ".next/**",
+      ".cursor/**",
+      ".vscode/**",
+      "node_modules/**",
+      "tests/**"
+    ]
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
