refactor(tests): overhaul test setup and improve coverage
- Remove deprecated test utilities and mocks
- Add comprehensive polyfills for test environment
- Update jest config to use Next.js defaults
- Improve test coverage thresholds and reporting
- Add detailed READMEs for test structure and guidelines

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/supertest": "^6.0.3",
     "artillery": "^2.0.23",
     "drizzle-kit": "^0.30.5",
+    "formdata-node": "^6.0.3",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "msw": "^2.10.3",
