--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # testing
 /coverage
+/playwright-report
+/test-results
 
 # database
 /prisma/db.sqlite
@@ -46,8 +48,13 @@ yarn-error.log*
 # idea files
 .idea
 
+# specstory
 /.specstory
+
+# vscode
 /.vscode
+
 /.source
 /.swc
 /docs/
+
