refactor(test): improve test setup and cleanup processes
feat(test): add test helpers and fixtures for e2e testing
feat(test): implement test user setup and cleanup scripts
feat(components): add test IDs to login and signup forms
fix(auth): improve auth store initialization logic
chore: remove unused performance and security tests

--- a/package.json
+++ b/package.json
@@ -26,11 +26,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:security": "playwright test tests/security",
-    "test:performance": "playwright test tests/performance",
-    "test:lighthouse": "lhci autorun --config=tests/performance/lighthouse.config.js",
-    "test:load": "artillery run tests/performance/load-test.yml",
-    "test:all": "pnpm test && pnpm test:e2e && pnpm test:security"
+    "test:all": "pnpm test && pnpm test:e2e"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
@@ -88,7 +84,6 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@jest/globals": "^30.0.4",
-    "@lhci/cli": "^0.15.1",
     "@mswjs/data": "^0.16.2",
     "@playwright/test": "^1.53.2",
     "@tailwindcss/postcss": "^4.0.15",
@@ -100,7 +95,6 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/supertest": "^6.0.3",
-    "artillery": "^2.0.23",
     "drizzle-kit": "^0.30.5",
     "formdata-node": "^6.0.3",
     "jest": "^30.0.4",
