Feature/cloudflare deploy (#7)
* feat(cloudflare): add Cloudflare Workers deployment support

- Add open-next config for Cloudflare deployment
- Include wrangler config and scripts for Cloudflare Workers
- Add Cloudflare compatibility fix in layout
- Update gitignore for Cloudflare-related files
- Add cache headers for static assets

* refactor(icons): replace tabler icons with lucide-react for better bundle size

- Consolidate all icons into a single icons.ts file for better maintainability
- Add bundle analyzer configuration and scripts for size monitoring
- Update jest and next configs to accommodate new icon library
- Add static generation to docs page for better performance

* refactor(build): remove unused bundle analysis scripts and dependencies

Remove analyze-bundle.ts script and webpack-bundle-analyzer dependency as they're no longer needed. Move bundlesize configuration from .bundlesize.json to package.json for simpler setup.

* refactor(stripe): update stripe import syntax and types

update default import to named import for stripe package
rename Stripe type imports to StripeTypes for consistency
add NEXT_PUBLIC_APP_URL to cloudflare deploy command

--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
-.env.test
-.env*.local
+.env.*
+.dev.vars
 
 # vercel
 .vercel
@@ -59,3 +57,7 @@ yarn-error.log*
 /docs/
 
 /.cursor
+CLAUDE.md
+
+/.open-next
+/.wrangler
