--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "admin:setup": "tsx scripts/setup-admin.ts",
+    "cf:dev": "wrangler dev --port 3000",
+    "cf:preview": "opennextjs-cloudflare build && wrangler dev --port 3000",
+    "cf:deploy": "NEXT_PUBLIC_APP_URL=https://cf.better-saas.org opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf:upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
@@ -25,12 +29,17 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:all": "pnpm test && pnpm test:e2e"
+    "test:all": "pnpm test && pnpm test:e2e",
+    "analyze": "ANALYZE=true pnpm build",
+    "analyze:server": "BUNDLE_ANALYZE=server pnpm build",
+    "analyze:browser": "BUNDLE_ANALYZE=browser pnpm build",
+    "size-check": "bundlesize"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@opennextjs/cloudflare": "^1.5.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -47,7 +56,6 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tabler/icons-react": "^3.34.0",
     "@types/mdx": "^2.0.13",
     "@types/mime-types": "^3.0.1",
     "@types/uuid": "^10.0.0",
@@ -81,7 +89,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@jest/globals": "^30.0.4",
-    "@mswjs/data": "^0.16.2",
+    "@next/bundle-analyzer": "^15.4.2",
     "@playwright/test": "^1.53.2",
     "@tailwindcss/postcss": "^4.0.15",
     "@testing-library/jest-dom": "^6.6.3",
@@ -91,25 +99,33 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/supertest": "^6.0.3",
+    "bundlesize2": "^0.0.35",
     "drizzle-kit": "^0.30.5",
     "formdata-node": "^6.0.3",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "msw": "^2.10.3",
     "pino-pretty": "^13.0.0",
     "playwright": "^1.53.2",
     "postcss": "^8.5.3",
-    "supertest": "^7.1.1",
     "tailwindcss": "^4.0.15",
     "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2",
-    "undici": "^7.11.0"
+    "undici": "^7.11.0",
+    "wrangler": "^4.25.0"
   },
-  "ct3aMetadata": {
-    "initVersion": "7.39.3"
-  },
-  "packageManager": "pnpm@10.6.4"
+  "packageManager": "pnpm@10.6.4",
+  "bundlesize":[
+    {
+      "path": ".next/static/chunks/*.js",
+      "maxSize": "200kb",
+      "compression": "gzip"
+    },
+    {
+      "path": ".next/static/css/*.css",
+      "maxSize": "50kb",
+      "compression": "gzip"
+    }
+  ]
 }
