--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.js", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "tests/**", "coverage/**", "playwright-report/**", "test-results/**"]
+  "exclude": ["node_modules", "tests/**", "coverage/**", "playwright-report/**", "test-results/**", "scripts/**"]
 }
