--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "@jsquash/jpeg": "^1.6.0",
+    "@jsquash/png": "^3.1.1",
+    "@jsquash/resize": "^2.1.0",
     "@neondatabase/serverless": "^1.0.1",
     "@opennextjs/cloudflare": "^1.5.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -77,7 +80,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "sharp": "^0.34.2",
     "sonner": "^2.0.5",
     "stripe": "^18.3.0",
     "swr": "^2.3.4",
@@ -116,7 +118,7 @@
     "wrangler": "^4.25.0"
   },
   "packageManager": "pnpm@10.6.4",
-  "bundlesize":[
+  "bundlesize": [
     {
       "path": ".next/static/chunks/*.js",
       "maxSize": "200kb",
