--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
-    "@jsquash/jpeg": "^1.6.0",
-    "@jsquash/png": "^3.1.1",
-    "@jsquash/resize": "^2.1.0",
+    "jimp": "^0.22.12",
     "@neondatabase/serverless": "^1.0.1",
     "@opennextjs/cloudflare": "^1.5.1",
     "@radix-ui/react-accordion": "^1.2.11",
