refactor(files): reorganize file service and related modules into files directory
feat(health): add health check API endpoint
perf(db): switch to neon-http for edge runtime compatibility
chore(config): update next.config for standalone output and external packages
style(layout): remove unnecessary script comment

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,22 @@
 {
-    "git": {
-      "deploymentEnabled": {
-        "main": true,
-        "*": false
-      }
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "*": false
     }
+  },
+  "functions": {
+    "src/app/api/auth/[...all]/route.ts": {
+      "runtime": "edge"
+    },
+    "src/app/api/health/route.ts": {
+      "runtime": "edge"
+    },
+    "src/app/api/webhooks/stripe/route.ts": {
+      "runtime": "nodejs20.x",
+      "maxDuration": 30
+    }
+  },
+  "regions": ["sin1", "hnd1", "iad1"],
+  "framework": "nextjs"
 }
