feat(credits): implement credit system with balance tracking and monthly distribution
- Add credit tables and schema for tracking user balances and transactions
- Create credit service with methods for earning/spending credits
- Implement monthly credit distribution cron job via Vercel
- Add UI components for displaying credit balance and history
- Integrate credits with existing auth and payment systems
- Include scripts for testing and migrating existing users

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "main": true,
       "*": false
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/monthly-credits",
+      "schedule": "0 2 1 * *"
+    }
+  ]
 }
