--- a/biome.jsonc
+++ b/biome.jsonc
@@ -34,6 +34,12 @@
           }
         }
       },
+      "suspicious": {
+        "noArrayIndexKey": "off"
+      },
+      "complexity": {
+        "noForEach": "off"
+      },
       "recommended": true
     }
   },
