--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
-    "jimp": "^0.22.12",
     "@neondatabase/serverless": "^1.0.1",
     "@opennextjs/cloudflare": "^1.5.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -50,6 +49,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -68,6 +68,7 @@
     "fumadocs-core": "^15.6.0",
     "fumadocs-mdx": "^11.6.10",
     "fumadocs-ui": "^15.6.0",
+    "jimp": "^0.22.12",
     "lucide-react": "^0.525.0",
     "mime-types": "^3.0.1",
     "next": "^15.2.3",
