feat(cron): add authentication for cron jobs
Add CRON_SECRET env variable and validation middleware to secure cron endpoints
Remove vercel-specific cron check in favor of secret-based authentication

--- a/env.example
+++ b/env.example
@@ -31,3 +31,7 @@ NEXT_PUBLIC_STRIPE_PRICE_ENTERPRISE_YEARLY="price_xxx"
 # Admin Configuration
 # Comma-separated list of admin emails
 ADMIN_EMAILS="admin@example.com,admin2@example.com"
+
+# Cron Security
+# Secret key for cron job authentication (optional but recommended for production)
+CRON_SECRET="your-cron-secret-key"
