--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,10 @@
   "crons": [
     {
       "path": "/api/cron/monthly-credits",
-      "schedule": "0 2 1 * *"
+      "schedule": "0 2 1 * *",
+      "headers": {
+        "Authorization": "Bearer $CRON_SECRET"
+      }
     }
   ]
 }
