fix: make CRON_SECRET required and remove auth header
The CRON_SECRET environment variable is now required for security. Removed the authorization header from vercel.json as it's no longer needed with the updated configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,7 @@
   "crons": [
     {
       "path": "/api/cron/monthly-credits",
-      "schedule": "0 2 1 * *",
-      "headers": {
-        "Authorization": "Bearer $CRON_SECRET"
-      }
+      "schedule": "0 2 1 * *"
     }
   ]
 }
