--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "@types/mdx": "^2.0.13",
     "@types/mime-types": "^3.0.1",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.1.0",
     "drizzle-orm": "^0.41.0",
     "fumadocs-core": "^15.6.0",
@@ -96,6 +98,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/bcryptjs": "^3.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
